Even listners added but not doing anything

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -11,17 +11,19 @@
 
 <body>
     <h1>Tic Tac Toe</h1>
-    <div class = "player">
+    <div id="p1" class = "player">
         Player 1
+           X
     </div>
     <div  id="p2" class = "player">
         Player 2
+           O
     </div>
     
     <div class='grid'>
         <div class="row">
-            <div class="gridbox" id="1"></div>
-            <div class="gridbox" id="2"></div>
+            <div class="gridbox" id="1"> </div>
+            <div class="gridbox" id="2"> </div>
             <div class="gridbox" id="3"></div>
         </div>
 
